{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 17,
  "lineage": "654d1fdc-57e8-06bf-9db8-54391e3fdec0",
  "resources": [
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:728738226157:instance/i-09baba8c2dea4c987",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09baba8c2dea4c987",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Aman-Pathak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0519394c62b5d7bc4",
            "private_dns": "ip-10-0-1-132.ec2.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-34-229-148-152.compute-1.amazonaws.com",
            "public_ip": "34.229.148.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bfeed3d0f74ab39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07b12ff16f4996789"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0593ffcb39211b5f9",
            "tags": {
              "Name": "Non-AMI-EC2"
            },
            "tags_all": {
              "Name": "Non-AMI-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b12ff16f4996789"
            ]
          },
          "dependencies": [
            "module.ASG.aws_security_group.Aman-SG",
            "module.ASG.aws_subnet.subnet-1",
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Aman-IG",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:internet-gateway/igw-0546a94b86c34fb83",
            "id": "igw-0546a94b86c34fb83",
            "owner_id": "728738226157",
            "tags": {
              "Name": "Aman-IG"
            },
            "tags_all": {
              "Name": "Aman-IG"
            },
            "vpc_id": "vpc-05ab628890915e133"
          },
          "dependencies": [
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Aman-RT",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:route-table/rtb-03d29f5c94ba3bc1b",
            "id": "rtb-03d29f5c94ba3bc1b",
            "owner_id": "728738226157",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0546a94b86c34fb83",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Aman-RT"
            },
            "tags_all": {
              "Name": "Aman-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab628890915e133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ASG.aws_internet_gateway.Aman-IG",
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Association1",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0162725647faff9f4",
            "route_table_id": "rtb-03d29f5c94ba3bc1b",
            "subnet_id": "subnet-0593ffcb39211b5f9"
          },
          "dependencies": [
            "module.ASG.aws_internet_gateway.Aman-IG",
            "module.ASG.aws_route_table.Aman-RT",
            "module.ASG.aws_subnet.subnet-1",
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Association2",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023f6a2e2abcd4dfb",
            "route_table_id": "rtb-03d29f5c94ba3bc1b",
            "subnet_id": "subnet-0be8449680900acd3"
          },
          "dependencies": [
            "module.ASG.aws_internet_gateway.Aman-IG",
            "module.ASG.aws_route_table.Aman-RT",
            "module.ASG.aws_subnet.subnet-2",
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Aman-SG",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:security-group/sg-07b12ff16f4996789",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b12ff16f4996789",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "728738226157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ab628890915e133"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:subnet/subnet-0593ffcb39211b5f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593ffcb39211b5f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-05ab628890915e133"
          },
          "dependencies": [
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:subnet/subnet-0be8449680900acd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8449680900acd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728738226157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-05ab628890915e133"
          },
          "dependencies": [
            "module.ASG.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ASG",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.ASG.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728738226157:vpc/vpc-05ab628890915e133",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e6fa9a2b3e6d6f7",
            "default_route_table_id": "rtb-0745efc656db9259a",
            "default_security_group_id": "sg-01a8ff88ae0ba3a9f",
            "dhcp_options_id": "dopt-080de88f6a273ee8a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ab628890915e133",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0745efc656db9259a",
            "owner_id": "728738226157",
            "tags": {
              "Name": "Aman-VPC"
            },
            "tags_all": {
              "Name": "Aman-VPC"
            }
          }
        }
      ]
    }
  ]
}